--- a/dataset/training/faster_rcnn_inception_v2_naruto.config
+++ b/dataset/training/faster_rcnn_inception_v2_naruto.config
@@ -1,8 +1,5 @@
 # Faster R-CNN with Inception v2, configured for Naruto Characters Dataset
-# Users should configure the fine_tune_checkpoint field in the train config as
-# well as the label_map_path and input_path fields in the train_input_reader and
-# eval_input_reader. Search for "PATH_TO_BE_CONFIGURED" to find the fields that
-# should be configured.
+# Replace "/home/jacob/Desktop/code/csc420/naruto-cv/detection" with your TF_FOLDER.
 
 model {
   faster_rcnn {
@@ -103,7 +100,7 @@ train_config: {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "/home/jacob/tensorflow/models/research/object_detection/faster_rcnn_inception_v2_coco_2018_01_28/model.ckpt"
+  fine_tune_checkpoint: "/home/jacob/Desktop/code/csc420/naruto-cv/detection/tensorflow/models/research/object_detection/faster_rcnn_inception_v2_coco_2018_01_28/model.ckpt"
   from_detection_checkpoint: true
   load_all_detection_checkpoint_vars: true
   # Note: The below line limits the training process to 200K steps, which we
@@ -120,9 +117,9 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "/home/jacob/tensorflow/models/research/object_detection/train.record"
+    input_path: "/home/jacob/Desktop/code/csc420/naruto-cv/detection/tensorflow/models/research/object_detection/train.record"
   }
-  label_map_path: "/home/jacob/tensorflow/models/research/object_detection/training/labelmap.pbtxt"
+  label_map_path: "/home/jacob/Desktop/code/csc420/naruto-cv/detection/tensorflow/models/research/object_detection/training/labelmap.pbtxt"
 }
 
 eval_config: {
@@ -132,9 +129,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "/home/jacob/tensorflow/models/research/object_detection/test.record"
+    input_path: "/home/jacob/Desktop/code/csc420/naruto-cv/detection/tensorflow/models/research/object_detection/test.record"
   }
-  label_map_path: "/home/jacob/tensorflow/models/research/object_detection/training/labelmap.pbtxt"
+  label_map_path: "/home/jacob/Desktop/code/csc420/naruto-cv/detection/tensorflow/models/research/object_detection/training/labelmap.pbtxt"
   shuffle: false
   num_readers: 1
 }
